// root-project/build.gradle
plugins {
	id 'base'
    id 'org.openjfx.javafxplugin' version '0.0.14' apply false
}

allprojects {
    version = '1.0.2603171138'
	description = 'JFX POS, Point of Sales System'
 	
	ext {
		namedversion = 'initiative move'
        vendor = 'Trans Fashion'
        copyright = 'Copyright ©2026 Transfashion Indonesia'
    }

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

	// agar saat compilasi, muncul di root project's build/libs (perlu untuk proses development)
    tasks.withType(Jar) {
        destinationDirectory = file("${rootProject.projectDir}/build/libs")
    }
}

tasks.named("clean") {
    delete rootProject.layout.buildDirectory
}

task run(dependsOn: ':launcher:run')




